# esp32-s3-n16r8

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  wokwi.toml
.github/workflows/: rust_ci.yml
docs/: Espressif Centralized Documentation Platform (CDP) _ Espressif Documentation.mhtml  FCC ID 2BB77-ESPS3-32E.mhtml  device.avif
scripts/: deploy.sh  init.sh  tail.sh
